# win-capture-sdk-qt6

./: .gitignore  CMakeLists.txt
include/: gcap_audio.h  gcapture.h
src/audio/: audio_manager.cpp  audio_manager.h
src/core/: c_api.cpp  capture_manager.cpp  capture_manager.h  exports.def  frame_converter.cpp  frame_converter.h
src/providers/: dshow_provider.cpp  dshow_provider.h  mf_recorder.cpp  mf_recorder.h  winmf_provider.cpp  winmf_provider.h  winmf_provider_old.cpp  winmf_provider_old.h
